// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserMenu component UserMenu renders properly (logged in) 1`] = `
<div>
  <a
    class="btn btn-outline"
    href="/demo"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-person-chalkboard"
      data-icon="person-chalkboard"
      data-prefix="fas"
      role="img"
      viewBox="0 0 640 512"
    >
      <path
        d="M192 80a56 56 0 1 0 0-112 56 56 0 1 0 0 112zM176 512l0-160c0-8.8 7.2-16 16-16s16 7.2 16 16l0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-336 128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-16 0 0-48 192 0 0 192-192 0 0-32-64 0 0 48c0 26.5 21.5 48 48 48l224 0c26.5 0 48-21.5 48-48l0-224c0-26.5-21.5-48-48-48L368 0c-26.5 0-48 21.5-48 48l0 64-122.7 0c-45.6 0-88.5 21.6-115.6 58.2L14.3 260.9c-10.5 14.2-7.6 34.2 6.6 44.8s34.2 7.6 44.8-6.6L112 236.7 112 512c0 17.7 14.3 32 32 32s32-14.3 32-32z"
        fill="currentColor"
      />
    </svg>
    <span
      class="display-small"
    >
        Demo
    </span>
  </a>
  <a
    class="btn btn-outline"
    href="/map"
    role="button"
    tabindex="0"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-globe"
      data-icon="globe"
      data-prefix="fas"
      role="img"
      viewBox="0 0 512 512"
    >
      <path
        d="M351.9 280l-190.9 0c2.9 64.5 17.2 123.9 37.5 167.4 11.4 24.5 23.7 41.8 35.1 52.4 11.2 10.5 18.9 12.2 22.9 12.2s11.7-1.7 22.9-12.2c11.4-10.6 23.7-28 35.1-52.4 20.3-43.5 34.6-102.9 37.5-167.4zM160.9 232l190.9 0C349 167.5 334.7 108.1 314.4 64.6 303 40.2 290.7 22.8 279.3 12.2 268.1 1.7 260.4 0 256.4 0s-11.7 1.7-22.9 12.2c-11.4 10.6-23.7 28-35.1 52.4-20.3 43.5-34.6 102.9-37.5 167.4zm-48 0C116.4 146.4 138.5 66.9 170.8 14.7 78.7 47.3 10.9 131.2 1.5 232l111.4 0zM1.5 280c9.4 100.8 77.2 184.7 169.3 217.3-32.3-52.2-54.4-131.7-57.9-217.3L1.5 280zm398.4 0c-3.5 85.6-25.6 165.1-57.9 217.3 92.1-32.7 159.9-116.5 169.3-217.3l-111.4 0zm111.4-48C501.9 131.2 434.1 47.3 342 14.7 374.3 66.9 396.4 146.4 399.9 232l111.4 0z"
        fill="currentColor"
      />
    </svg>
    <span
      class="display-small"
    >
        Map
    </span>
  </a>
  <div
    class="dropdown"
  >
    <button
      aria-expanded="false"
      class="dropdown-toggle btn btn-outline"
      id="react-aria-«ra»"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user"
        data-icon="user"
        data-prefix="fas"
        role="img"
        viewBox="0 0 448 512"
      >
        <path
          d="M224 248a120 120 0 1 0 0-240 120 120 0 1 0 0 240zm-29.7 56C95.8 304 16 383.8 16 482.3 16 498.7 29.3 512 45.7 512l356.6 0c16.4 0 29.7-13.3 29.7-29.7 0-98.5-79.8-178.3-178.3-178.3l-59.4 0z"
          fill="currentColor"
        />
      </svg>
      <span
        class="display-small"
      >
         
        Test User
      </span>
    </button>
  </div>
</div>
`;

exports[`UserMenu component UserMenu renders properly (not logged in) 1`] = `
<div>
  <div
    class="btn-group"
    role="group"
  >
    <a
      class="btn btn-outline"
      href="/demo"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-person-chalkboard"
        data-icon="person-chalkboard"
        data-prefix="fas"
        role="img"
        viewBox="0 0 640 512"
      >
        <path
          d="M192 80a56 56 0 1 0 0-112 56 56 0 1 0 0 112zM176 512l0-160c0-8.8 7.2-16 16-16s16 7.2 16 16l0 160c0 17.7 14.3 32 32 32s32-14.3 32-32l0-336 128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-16 0 0-48 192 0 0 192-192 0 0-32-64 0 0 48c0 26.5 21.5 48 48 48l224 0c26.5 0 48-21.5 48-48l0-224c0-26.5-21.5-48-48-48L368 0c-26.5 0-48 21.5-48 48l0 64-122.7 0c-45.6 0-88.5 21.6-115.6 58.2L14.3 260.9c-10.5 14.2-7.6 34.2 6.6 44.8s34.2 7.6 44.8-6.6L112 236.7 112 512c0 17.7 14.3 32 32 32s32-14.3 32-32z"
          fill="currentColor"
        />
      </svg>
      <span
        class="display-small"
      >
          Demo
      </span>
    </a>
    <a
      class="btn btn-outline"
      href="/register"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-user-plus"
        data-icon="user-plus"
        data-prefix="fas"
        role="img"
        viewBox="0 0 640 512"
      >
        <path
          d="M136 128a120 120 0 1 1 240 0 120 120 0 1 1 -240 0zM48 482.3C48 383.8 127.8 304 226.3 304l59.4 0c98.5 0 178.3 79.8 178.3 178.3 0 16.4-13.3 29.7-29.7 29.7L77.7 512C61.3 512 48 498.7 48 482.3zM544 96c13.3 0 24 10.7 24 24l0 48 48 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-48 0 0 48c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-48-48 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l48 0 0-48c0-13.3 10.7-24 24-24z"
          fill="currentColor"
        />
      </svg>
      <span
        class="display-small"
      >
          Register
      </span>
    </a>
    <a
      class="btn btn-outline"
      href="/login"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-right-to-bracket"
        data-icon="right-to-bracket"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M345 273c9.4-9.4 9.4-24.6 0-33.9L201 95c-6.9-6.9-17.2-8.9-26.2-5.2S160 102.3 160 112l0 80-112 0c-26.5 0-48 21.5-48 48l0 32c0 26.5 21.5 48 48 48l112 0 0 80c0 9.7 5.8 18.5 14.8 22.2s19.3 1.7 26.2-5.2L345 273zm7 143c-17.7 0-32 14.3-32 32s14.3 32 32 32l64 0c53 0 96-43 96-96l0-256c0-53-43-96-96-96l-64 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l64 0c17.7 0 32 14.3 32 32l0 256c0 17.7-14.3 32-32 32l-64 0z"
          fill="currentColor"
        />
      </svg>
      <span
        class="display-small"
      >
          Sign in
      </span>
    </a>
  </div>
</div>
`;
